lib/src/ffi/generated_native_asset_bindings.dart


sealed class llama_dart_result {
  static const LLAMA_DART_SUCCESS = 0;
  static const LLAMA_DART_ERROR_INVALID_ARGUMENT = 1;
  static const LLAMA_DART_ERROR_UNSUPPORTED = 2;
  static const LLAMA_DART_ERROR_INTERNAL = 3;
  static const LLAMA_DART_ERROR_MODEL_LOAD = 4;
  static const LLAMA_DART_ERROR_BUFFER_TOO_SMALL = 5;
  static const LLAMA_DART_ERROR_CONTEXT_CREATE = 6;
  static const LLAMA_DART_ERROR_GENERATION = 7;
  static const LLAMA_DART_ERROR_EMBEDDING = 8;
  static const LLAMA_DART_ERROR_CANCELLED = 9;
  static const LLAMA_DART_ERROR_RERANKING = 10;
  static const LLAMA_DART_ERROR_LORA = 11;
}

sealed class llama_dart_capability_flags {
  static const LLAMA_DART_CAP_MODEL_LOADING = 128;
  static const LLAMA_DART_CAP_TOKENIZATION = 256;
  static const LLAMA_DART_CAP_STRUCTURED_OUTPUT = 512;
  static const LLAMA_DART_CAP_TEXT_GENERATION = 1;
  static const LLAMA_DART_CAP_EMBEDDINGS = 2;
  static const LLAMA_DART_CAP_RERANKING = 4;
  static const LLAMA_DART_CAP_MULTIMODAL = 8;
  static const LLAMA_DART_CAP_LORA = 16;
  static const LLAMA_DART_CAP_SPECULATIVE_DECODING = 32;
  static const LLAMA_DART_CAP_MTP = 64;
  static const LLAMA_DART_CAP_METAL = 1024;
  static const LLAMA_DART_CAP_VULKAN = 2048;
  static const LLAMA_DART_CAP_TOOL_CALLING = 4096;
  static const LLAMA_DART_CAP_LOGGING = 8192;
  static const LLAMA_DART_CAP_PREFILL = 16384;
}

final class llama_dart_capabilities extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint64()
  external int flags;
}

final class llama_dart_model extends ffi.Opaque {}

final class llama_dart_context extends ffi.Opaque {}

final class llama_dart_generation extends ffi.Opaque {}

final class llama_dart_lora_adapter extends ffi.Opaque {}

sealed class llama_dart_gpu_backend {
  static const LLAMA_DART_GPU_BACKEND_AUTO = 0;
  static const LLAMA_DART_GPU_BACKEND_CPU = 1;
  static const LLAMA_DART_GPU_BACKEND_METAL = 2;
  static const LLAMA_DART_GPU_BACKEND_VULKAN = 3;
}

sealed class llama_dart_log_level {
  static const LLAMA_DART_LOG_DISABLED = 0;
  static const LLAMA_DART_LOG_DEBUG = 1;
  static const LLAMA_DART_LOG_INFO = 2;
  static const LLAMA_DART_LOG_WARNING = 3;
  static const LLAMA_DART_LOG_ERROR = 4;
}

sealed class llama_dart_media_type {
  static const LLAMA_DART_MEDIA_IMAGE = 1;
  static const LLAMA_DART_MEDIA_AUDIO = 2;
}

sealed class llama_dart_speculative_type {
  static const LLAMA_DART_SPECULATIVE_NONE = 0;
  static const LLAMA_DART_SPECULATIVE_NGRAM_SIMPLE = 1;
  static const LLAMA_DART_SPECULATIVE_DRAFT_MODEL = 2;
  static const LLAMA_DART_SPECULATIVE_EAGLE3 = 3;
  static const LLAMA_DART_SPECULATIVE_MTP = 4;
  static const LLAMA_DART_SPECULATIVE_NGRAM_MAP_K = 5;
  static const LLAMA_DART_SPECULATIVE_NGRAM_MAP_K4V = 6;
  static const LLAMA_DART_SPECULATIVE_DFLASH = 7;
  static const LLAMA_DART_SPECULATIVE_NGRAM_MOD = 8;
  static const LLAMA_DART_SPECULATIVE_NGRAM_CACHE = 9;
}

sealed class llama_dart_add_special_mode {
  static const LLAMA_DART_ADD_SPECIAL_NEVER = 0;
  static const LLAMA_DART_ADD_SPECIAL_ALWAYS = 1;
  static const LLAMA_DART_ADD_SPECIAL_IF_CONTEXT_EMPTY = 2;
}

sealed class llama_dart_stop_reason {
  static const LLAMA_DART_STOP_REASON_UNKNOWN = 0;
  static const LLAMA_DART_STOP_REASON_END_OF_GENERATION = 1;
  static const LLAMA_DART_STOP_REASON_STOP_SEQUENCE = 2;
  static const LLAMA_DART_STOP_REASON_STOP_TOKEN = 3;
  static const LLAMA_DART_STOP_REASON_MAX_TOKENS = 4;
}

sealed class llama_dart_kv_cache_type {
  static const LLAMA_DART_KV_CACHE_DEFAULT = 0;
  static const LLAMA_DART_KV_CACHE_F32 = 1;
  static const LLAMA_DART_KV_CACHE_F16 = 2;
  static const LLAMA_DART_KV_CACHE_BF16 = 3;
  static const LLAMA_DART_KV_CACHE_Q8_0 = 4;
  static const LLAMA_DART_KV_CACHE_Q4_0 = 5;
  static const LLAMA_DART_KV_CACHE_Q4_1 = 6;
  static const LLAMA_DART_KV_CACHE_IQ4_NL = 7;
  static const LLAMA_DART_KV_CACHE_Q5_0 = 8;
  static const LLAMA_DART_KV_CACHE_Q5_1 = 9;
}

sealed class llama_dart_flash_attention_mode {
  static const LLAMA_DART_FLASH_ATTENTION_AUTO = 0;
  static const LLAMA_DART_FLASH_ATTENTION_DISABLED = 1;
  static const LLAMA_DART_FLASH_ATTENTION_ENABLED = 2;
}

final class llama_dart_media_input extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int type;

  external ffi.Pointer<ffi.Uint8> path_data;

  @ffi.Size()
  external int path_size;

  external ffi.Pointer<ffi.Uint8> content_data;

  @ffi.Size()
  external int content_size;
}

final class llama_dart_model_load_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> model_path_data;

  @ffi.Size()
  external int model_path_size;

  @ffi.Int32()
  external int n_gpu_layers;

  @ffi.Uint8()
  external int vocab_only;

  @ffi.Uint8()
  external int use_mmap;

  @ffi.Uint8()
  external int use_mlock;

  @ffi.Uint8()
  external int check_tensors;

  @ffi.Uint32()
  external int gpu_backend;

  external ffi.Pointer<ffi.Uint8> chat_template_data;

  @ffi.Size()
  external int chat_template_size;

  @ffi.Uint8()
  external int load_mtp;
}

final class llama_dart_model_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Int32()
  external int vocab_type;

  @ffi.Int32()
  external int n_vocab;

  @ffi.Int32()
  external int n_ctx_train;

  @ffi.Int32()
  external int n_embd;

  @ffi.Int32()
  external int n_embd_inp;

  @ffi.Int32()
  external int n_embd_out;

  @ffi.Int32()
  external int n_layer;

  @ffi.Int32()
  external int n_layer_nextn;

  @ffi.Int32()
  external int n_head;

  @ffi.Int32()
  external int n_head_kv;

  @ffi.Int32()
  external int ftype;

  @ffi.Uint64()
  external int size_bytes;

  @ffi.Uint64()
  external int n_params;

  @ffi.Int32()
  external int token_bos;

  @ffi.Int32()
  external int token_eos;

  @ffi.Int32()
  external int token_eot;

  @ffi.Int32()
  external int token_sep;

  @ffi.Int32()
  external int token_nl;

  @ffi.Int32()
  external int token_pad;

  @ffi.Int32()
  external int token_mask;

  @ffi.Uint8()
  external int has_encoder;

  @ffi.Uint8()
  external int has_decoder;

  @ffi.Uint8()
  external int is_recurrent;

  @ffi.Uint8()
  external int is_hybrid;

  @ffi.Uint8()
  external int is_diffusion;

  @ffi.Uint8()
  external int add_bos;

  @ffi.Uint8()
  external int add_eos;

  @ffi.Uint8()
  external int add_sep;
}

final class llama_dart_context_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int context_size;

  @ffi.Uint32()
  external int batch_size;

  @ffi.Uint32()
  external int ubatch_size;

  @ffi.Int32()
  external int threads;

  @ffi.Int32()
  external int batch_threads;

  @ffi.Uint8()
  external int embeddings;

  @ffi.Int32()
  external int pooling_type;

  @ffi.Int32()
  external int attention_type;

  @ffi.Uint32()
  external int speculative_ngram_n;

  @ffi.Uint32()
  external int speculative_ngram_m;

  external ffi.Pointer<ffi.Uint8> mmproj_path_data;

  @ffi.Size()
  external int mmproj_path_size;

  @ffi.Uint8()
  external int mmproj_use_gpu;

  @ffi.Uint32()
  external int speculative_type;

  external ffi.Pointer<ffi.Uint8> speculative_model_path_data;

  @ffi.Size()
  external int speculative_model_path_size;

  @ffi.Uint32()
  external int speculative_draft_max;

  @ffi.Uint32()
  external int kv_cache_key_type;

  @ffi.Uint32()
  external int kv_cache_value_type;

  @ffi.Uint32()
  external int flash_attention;

  @ffi.Uint8()
  external int kv_cache_offload;

  @ffi.Uint8()
  external int swa_full;

  @ffi.Uint8()
  external int kv_unified;

  @ffi.Uint32()
  external int speculative_ngram_min_draft;
}

final class llama_dart_context_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int context_size;

  @ffi.Uint32()
  external int sequence_context_size;

  @ffi.Uint32()
  external int batch_size;

  @ffi.Uint32()
  external int ubatch_size;

  @ffi.Uint32()
  external int max_sequences;

  @ffi.Uint8()
  external int supports_vision;

  @ffi.Uint8()
  external int supports_audio;

  @ffi.Uint32()
  external int gpu_backend;

  @ffi.Uint8()
  external int supports_context_shift;

  @ffi.Uint32()
  external int used_tokens;

  @ffi.Uint32()
  external int kv_cache_key_type;

  @ffi.Uint32()
  external int kv_cache_value_type;

  @ffi.Uint32()
  external int flash_attention;

  @ffi.Uint8()
  external int kv_cache_offload;

  @ffi.Uint8()
  external int swa_full;

  @ffi.Uint8()
  external int kv_unified;
}

final class llama_dart_chat_template_capabilities extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint8()
  external int supports_tools;

  @ffi.Uint8()
  external int supports_tool_calls;

  @ffi.Uint8()
  external int supports_parallel_tool_calls;
}

final class llama_dart_string_view extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int size;
}

final class llama_dart_completion_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> prompt_data;

  @ffi.Size()
  external int prompt_size;

  @ffi.Uint32()
  external int max_tokens;

  @ffi.Float()
  external double temperature;

  @ffi.Int32()
  external int top_k;

  @ffi.Float()
  external double top_p;

  @ffi.Float()
  external double min_p;

  @ffi.Float()
  external double typical_p;

  @ffi.Int32()
  external int penalty_last_n;

  @ffi.Float()
  external double repeat_penalty;

  @ffi.Float()
  external double frequency_penalty;

  @ffi.Float()
  external double presence_penalty;

  @ffi.Uint8()
  external int mirostat;

  @ffi.Float()
  external double mirostat_tau;

  @ffi.Float()
  external double mirostat_eta;

  external ffi.Pointer<ffi.Uint8> grammar_data;

  @ffi.Size()
  external int grammar_size;

  external ffi.Pointer<ffi.Uint8> grammar_root_data;

  @ffi.Size()
  external int grammar_root_size;

  external ffi.Pointer<llama_dart_string_view> stop_sequences;

  @ffi.Size()
  external int stop_sequence_count;

  @ffi.Uint32()
  external int seed;

  @ffi.Uint8()
  external int add_special;

  @ffi.Uint8()
  external int parse_special;

  external ffi.Pointer<llama_dart_media_input> media_inputs;

  @ffi.Size()
  external int media_input_count;

  external ffi.Pointer<ffi.Uint8> json_schema_data;

  @ffi.Size()
  external int json_schema_size;

  external ffi.Pointer<ffi.Uint8> chat_plan_data;

  @ffi.Size()
  external int chat_plan_size;

  external ffi.Pointer<ffi.Int32> stop_tokens;

  @ffi.Size()
  external int stop_token_count;
}

final class llama_dart_completion_stats extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int prompt_tokens;

  @ffi.Uint32()
  external int generated_tokens;

  @ffi.Double()
  external double prompt_eval_ms;

  @ffi.Double()
  external double decode_ms;

  @ffi.Double()
  external double total_ms;

  @ffi.Double()
  external double time_to_first_token_ms;

  @ffi.Uint32()
  external int speculative_draft_tokens;

  @ffi.Uint32()
  external int speculative_accepted_tokens;

  @ffi.Double()
  external double speculative_draft_ms;

  @ffi.Double()
  external double speculative_verify_ms;

  @ffi.Uint32()
  external int stop_reason;
}

final class llama_dart_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int size;
}

final class llama_dart_float_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Float> data;

  @ffi.Size()
  external int length;
}

final class llama_dart_embedding_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Uint8> text_data;

  @ffi.Size()
  external int text_size;

  @ffi.Uint8()
  external int add_special;

  @ffi.Uint8()
  external int parse_special;
}

final class llama_dart_rerank_config extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;
